--- a/1_事前準備.md
+++ b/1_事前準備.md
@@ -1,7 +1,7 @@
-# 1_事前準備(Amazon AMI(Amazon Linux1)版)
+# 1_事前準備(Amazon Linux AMI版)
 
 
-<p style='text-align: right;'> &copy; 20210901 by Takanori Shima </p>
+<p style='text-align: right;'> &copy; 20210907 by Takanori Shima </p>
 
 ```
 * 以下、Cloud9上でターミナルを起動してコマンドを打つ *
@@ -24,6 +24,7 @@ sudo yum -y install http://rpms.famillecollet.com/enterprise/remi-release-6.rpm
 sudo yum -y install php72 php72-cli php72-common php72-devel php72-gd php72-intl php72-mbstring php72-mysqlnd php72-pdo php72-pecl-mcrypt php72-opcache php72-pecl-apcu php72-pecl-imagick php72-pecl-memcached php72-php-pecl-redis php72-php-pecl-xdebug php72-xml
 sudo alternatives --set php /usr/bin/php-7.2
 php -v
+yum install php-pdo php-pgsql
 ```
 > PHP 7.2.34 (cli) (built: Oct 21 2020 19:52:01) ( NTS )
 
@@ -106,7 +107,7 @@ sed -e "/utf8/d" -e "/client/d" -e "/^\[mysqld_safe\]$/i character-set-server=ut
 
 ### MySQL起動
 ```
-sudo service mysqld start
+sudo service mysqld restart
 ```
 
 ### MySQLに管理者(root)でログイン
@@ -117,18 +118,18 @@ mysql -u root
 ### 文字コード設定確認
 ```
 mysql> show variables like '%char%';
--+--------------------------+----------------------------+
--| Variable_name            | Value                      |
--+--------------------------+----------------------------+
--| character_set_client     | utf8                       |
--| character_set_connection | utf8                       |
--| character_set_database   | utf8                       |
--| character_set_filesystem | binary                     |
--| character_set_results    | utf8                       |
--| character_set_server     | utf8                       |
--| character_set_system     | utf8                       |
--| character_sets_dir       | /usr/share/mysql/charsets/ |
--+--------------------------+----------------------------+
++--------------------------+----------------------------+
+| Variable_name            | Value                      |
++--------------------------+----------------------------+
+| character_set_client     | utf8                       |
+| character_set_connection | utf8                       |
+| character_set_database   | utf8                       |
+| character_set_filesystem | binary                     |
+| character_set_results    | utf8                       |
+| character_set_server     | utf8                       |
+| character_set_system     | utf8                       |
+| character_sets_dir       | /usr/share/mysql/charsets/ |
++--------------------------+----------------------------+
 ```
 
 ### MySQLからログアウト
