--- a/5_投稿一覧表示.md
+++ b/5_投稿一覧表示.md
@@ -1,17 +1,13 @@
 # 5_コントローラアクションの実装とビューの作成①(一覧表示)
 
-<p style='text-align: right;'> &copy; 20210901 by Takanori Shima </p>
+<p style='text-align: right;'> &copy; 20210907 by Takanori Shima </p>
 
 ```
-# 以下、Cloud9上でLaravelアプリフォルダを右クリックして、Open Terminal Hereを選択しターミナルを3つ起動
-
-Laravelアプリ開発時にはターミナルは以下の3つを同時に開いておくとよい
-- 各種コマンド実行用（作業用）
-- Laravelサーバ起動用（常時）
-- MySQL用（常時）
-sudo service mysqld start
-mysql -u root
-mysql> use bbs;
+* 以下、Cloud9上でターミナルを起動してコマンドを打つ *
+最終的には3つのターミナルを同時に開いておく
+- MySQL用(占有)
+- Laravelサーバ起動用(占有)
+- artisanコマンドを随時実行用
 ```
 
 ## 1. indexアクションの実装 
@@ -31,8 +27,6 @@ mysql> use bbs;
         return view('messages.index', ['messages' => $messages, 'flash_message' => null, 'errors' => null]);
     }
 ``` 
-
-
 
 ## 2. index.blade.php 作成
 ### resources/views/messages/index.blade.php 新規作成
@@ -110,12 +104,12 @@ mysql> use bbs;
     </body>
 </html>
 ```
-### 3. Laravel サーバを起動してプレビューを表示
+## 3. Laravel サーバを起動してプレビューを表示
 ```
 php artisan serve --host=$IP --port=$PORT
 ```
 
-### 4. Laravel流に index.blade.php を書き換え
+## 4. Laravel流に index.blade.php を書き換え
 ```html
 <!DOCTYPE html>
 <html lang="ja">
@@ -191,8 +185,8 @@ php artisan serve --host=$IP --port=$PORT
 </html>
 ```
 
-### 5. CSSファイルの作成
-####  public/css/style.css
+## 5. CSSファイルの作成
+###  public/css/style.css
 ```css
 @charset "utf-8";
 h1 {
@@ -202,6 +196,7 @@ h1 {
 h2{
     color: red;
     background-color: pink;
+    padding: 5px;
 }
 
 ul {
@@ -211,6 +206,8 @@ ul {
 li {
     margin-bottom: 5px;
     color: red;
+    background-color: pink;
+    padding: 5px;
 }
 
 img{
@@ -219,20 +216,9 @@ img{
     margin: 0 auto;
 }
 ```
-### 6. JavaScriptファイルの作成
-#### 
-```javascript
-function previewImage(obj){
-	var fileReader = new FileReader();
-	fileReader.onload = (function() {
-		document.getElementById('preview').src = fileReader.result;
-	});
-	fileReader.readAsDataURL(obj.files[0]);
-}
-```
-### 固定画像用、画像アプロード用フォルダ作成
-#### public/uploads を作成して 1.jpgを配置
-#### public/images を作成して favicon.ico画像を配置
+## 6. 固定画像用、画像アプロード用フォルダ作成
+### public/uploads を作成して 1.jpgを配置
+### public/images を作成して favicon.ico画像を配置
 
 ## 7. テンプレートファイルの作成とビューの分離
 ### resources/views/layouts/app.blade.php 作成
