--- a/6_新規投稿.md
+++ b/6_新規投稿.md
@@ -1,17 +1,13 @@
 # 6_コントローラアクションの実装とビューの作成②(新規投稿)
 
-<p style='text-align: right;'> &copy; 20210901 by Takanori Shima </p>
+<p style='text-align: right;'> &copy; 20210907 by Takanori Shima </p>
 
 ```
-# 以下、Cloud9上でLaravelアプリフォルダを右クリックして、Open Terminal Hereを選択しターミナルを3つ起動
-
-Laravelアプリ開発時にはターミナルは以下の3つを同時に開いておくとよい
-- 各種コマンド実行用（作業用）
-- Laravelサーバ起動用（常時）
-- MySQL用（常時）
-sudo service mysqld start
-mysql -u root
-mysql> use bbs;
+* 以下、Cloud9上でターミナルを起動してコマンドを打つ *
+最終的には3つのターミナルを同時に開いておく
+- MySQL用(占有)
+- Laravelサーバ起動用(占有)
+- artisanコマンドを随時実行用
 ```
 
 ## 1. createアクションの実装 
@@ -34,8 +30,6 @@ mysql> use bbs;
         
         // 連想配列のデータを3セット（viewで引き出すキーワードと値のセット）引き連れてviewを呼び出す
         return view('messages.create', compact('message', 'flash_message', 'errors'));
-        
-        
     }
 
 ``` 
@@ -93,8 +87,8 @@ mysql> use bbs;
                     </div>
                 </form>
             </div>
-             <div class="row mt-5">
-                <a href="index.php" class="btn btn-primary">投稿一覧</a>
+            <div class="row mt-5">
+                <a href="/" class="btn btn-primary">投稿一覧</a>
             </div>
 @endsection
 ```
@@ -225,11 +219,9 @@ class Message extends Model
         // セッション情報の破棄
         session()->forget('flash_message');
         
-        // エラーメッセージをセッションから取得
-        $errors = session('errors');
-        // セッション情報の破棄
-        session()->forget('errors');
-    
+        // エラーメッセージにnullをセット
+        $errors = null;
+
         // 連想配列のデータを3セット（viewで引き出すキーワードと値のセット）引き連れてviewを呼び出す
         return view('messages.index', compact('messages', 'flash_message', 'errors'));
     }
