--- a/7_投稿詳細.md
+++ b/7_投稿詳細.md
@@ -1,17 +1,13 @@
 # 7_コントローラアクションの実装とビューの作成③(投稿詳細)
 
-<p style='text-align: right;'> &copy; 20210901 by Takanori Shima </p>
+<p style='text-align: right;'> &copy; 20210907 by Takanori Shima </p>
 
 ```
-# 以下、Cloud9上でLaravelアプリフォルダを右クリックして、Open Terminal Hereを選択しターミナルを3つ起動
-
-Laravelアプリ開発時にはターミナルは以下の3つを同時に開いておくとよい
-- 各種コマンド実行用（作業用）
-- Laravelサーバ起動用（常時）
-- MySQL用（常時）
-sudo service mysqld start
-mysql -u root
-mysql> use bbs;
+* 以下、Cloud9上でターミナルを起動してコマンドを打つ *
+最終的には3つのターミナルを同時に開いておく
+- MySQL用(占有)
+- Laravelサーバ起動用(占有)
+- artisanコマンドを随時実行用
 ```
 
 ## 1. showアクションの実装 
