--- a/8_投稿編集.md
+++ b/8_投稿編集.md
@@ -1,17 +1,13 @@
-# 8_コントローラアクションの実装とビューの作成④(編集編集)
+# 8_コントローラアクションの実装とビューの作成④(編集)
 
-<p style='text-align: right;'> &copy; 20210901 by Takanori Shima </p>
+<p style='text-align: right;'> &copy; 20210907 by Takanori Shima </p>
 
 ```
-# 以下、Cloud9上でLaravelアプリフォルダを右クリックして、Open Terminal Hereを選択しターミナルを3つ起動
-
-Laravelアプリ開発時にはターミナルは以下の3つを同時に開いておくとよい
-- 各種コマンド実行用（作業用）
-- Laravelサーバ起動用（常時）
-- MySQL用（常時）
-sudo service mysqld start
-mysql -u root
-mysql> use bbs;
+* 以下、Cloud9上でターミナルを起動してコマンドを打つ *
+最終的には3つのターミナルを同時に開いておく
+- MySQL用(占有)
+- Laravelサーバ起動用(占有)
+- artisanコマンドを随時実行用
 ```
 
 ## 1. editアクションの実装 
@@ -161,13 +157,12 @@ mysql> use bbs;
             // セッションにflash_messageを保存
             session(['flash_message' => 'id: ' . $message->id . 'の投稿の更新が成功しました']);
             
-            // indexアクションにリダイレクト
+            // showアクションにリダイレクト
             return redirect('/messages/' . $message->id);
             
         }else{
-            // セッションに、入力したメッセージインスタンス と errors保存
-            session(['errors' => $errors, 'message' => $message]);
-            
+            // セッションにerrors保存
+            session(['errors' => $errors]);
             // editアクションにリダイレクト
             return redirect('/messages/' . $message->id . '/edit');
         }
@@ -204,7 +199,7 @@ mysql> use bbs;
 ## 5. Git/Github
 ```
 git add .
-git commit -m "投稿詳細編集完了"
+git commit -m "投稿編集完了"
 git push origin main
 ```
 
