--- a/4_コントローラの作成とルーティング.md
+++ b/4_コントローラの作成とルーティング.md
@@ -1,14 +1,13 @@
 # 4_コントローラの作成とルーティング
 
-<p style='text-align: right;'> &copy; 20210901 by Takanori Shima </p>
+<p style='text-align: right;'> &copy; 20210907 by Takanori Shima </p>
 
 ```
-# 以下、Cloud9上でLaravelアプリフォルダを右クリックして、Open Terminal Hereを選択しターミナルを3つ起動
-
-Laravelアプリ開発時にはターミナルは以下の3つを同時に開いておくとよい
-- 各種コマンド実行用（作業用）
-- Laravelサーバ起動用（常時）
-- MySQL用（常時）
+* 以下、Cloud9上でターミナルを起動してコマンドを打つ *
+最終的には3つのターミナルを同時に開いておく
+- MySQL用(占有)
+- Laravelサーバ起動用(占有)
+- artisanコマンドを随時実行用
 ```
 
 ## 1. 初期のルーティング確認
@@ -36,123 +35,123 @@ php artisan make:controller MessagesController --resource --model=Message
 ## 3. コントローラファイルの中身確認
 ### app/Http/Controllers/MessagesController.php
 
-```php
-<?php
-
-namespace App\Http\Controllers;
-
-use App\Message;
-use Illuminate\Http\Request;
-
-class MessagesController extends Controller
-{
-    /**
-     * Display a listing of the resource.
-     *
-     * @return \Illuminate\Http\Response
-     */
-    public function index()
+    <?php
+    
+    namespace App\Http\Controllers;
+    
+    use App\Message;
+    use Illuminate\Http\Request;
+    
+    class MessagesController extends Controller
     {
-        //
+        /**
+         * Display a listing of the resource.
+         *
+         * @return \Illuminate\Http\Response
+         */
+        public function index()
+        {
+            //
+        }
+    
+        /**
+         * Show the form for creating a new resource.
+         *
+         * @return \Illuminate\Http\Response
+         */
+        public function create()
+        {
+            //
+        }
+    
+        /**
+         * Store a newly created resource in storage.
+         *
+         * @param  \Illuminate\Http\Request  $request
+         * @return \Illuminate\Http\Response
+         */
+        public function store(Request $request)
+        {
+            //
+        }
+    
+        /**
+         * Display the specified resource.
+         *
+         * @param  \App\Message  $message
+         * @return \Illuminate\Http\Response
+         */
+        public function show(Message $message)
+        {
+            //
+        }
+    
+        /**
+         * Show the form for editing the specified resource.
+         *
+         * @param  \App\Message  $message
+         * @return \Illuminate\Http\Response
+         */
+        public function edit(Message $message)
+        {
+            //
+        }
+    
+        /**
+         * Update the specified resource in storage.
+         *
+         * @param  \Illuminate\Http\Request  $request
+         * @param  \App\Message  $message
+         * @return \Illuminate\Http\Response
+         */
+        public function update(Request $request, Message $message)
+        {
+            //
+        }
+    
+        /**
+         * Remove the specified resource from storage.
+         *
+         * @param  \App\Message  $message
+         * @return \Illuminate\Http\Response
+         */
+        public function destroy(Message $message)
+        {
+            //
+        }
     }
 
-    /**
-     * Show the form for creating a new resource.
-     *
-     * @return \Illuminate\Http\Response
-     */
-    public function create()
-    {
-        //
-    }
 
-    /**
-     * Store a newly created resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @return \Illuminate\Http\Response
-     */
-    public function store(Request $request)
-    {
-        //
-    }
 
-    /**
-     * Display the specified resource.
-     *
-     * @param  \App\Message  $message
-     * @return \Illuminate\Http\Response
-     */
-    public function show(Message $message)
-    {
-        //
-    }
-
-    /**
-     * Show the form for editing the specified resource.
-     *
-     * @param  \App\Message  $message
-     * @return \Illuminate\Http\Response
-     */
-    public function edit(Message $message)
-    {
-        //
-    }
-
-    /**
-     * Update the specified resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @param  \App\Message  $message
-     * @return \Illuminate\Http\Response
-     */
-    public function update(Request $request, Message $message)
-    {
-        //
-    }
-
-    /**
-     * Remove the specified resource from storage.
-     *
-     * @param  \App\Message  $message
-     * @return \Illuminate\Http\Response
-     */
-    public function destroy(Message $message)
-    {
-        //
-    }
-}
-
-```
 
 ## 4. ルーター設定
 ### routes/web.php
 
-```php
-<?php
 
-/*
-|--------------------------------------------------------------------------
-| Web Routes
-|--------------------------------------------------------------------------
-|
-| Here is where you can register web routes for your application. These
-| routes are loaded by the RouteServiceProvider within a group which
-| contains the "web" middleware group. Now create something great!
-|
-*/
+    <?php
+    
+    /*
+    |--------------------------------------------------------------------------
+    | Web Routes
+    |--------------------------------------------------------------------------
+    |
+    | Here is where you can register web routes for your application. These
+    | routes are loaded by the RouteServiceProvider within a group which
+    | contains the "web" middleware group. Now create something great!
+    |
+    */
+    
+    // Route::get('/', function () {
+    //     return view('welcome');
+    // });
+    
+    Route::get('/', 'MessagesController@index');
+    Route::resource('messages', 'MessagesController');
+    // HTTPS接続でアセット(CSSや画像など)を読み込むため
+    if (env('APP_ENV') === 'local') {
+        URL::forceScheme('https');
+    };
 
-// Route::get('/', function () {
-//     return view('welcome');
-// });
-
-Route::get('/', 'MessagesController@index');
-Route::resource('messages', 'MessagesController');
-// HTTPS接続でアセット(CSSや画像など)を読み込むため
-if (env('APP_ENV') === 'local') {
-    URL::forceScheme('https');
-};
-```
 
 ##  5. 最新ルーティング確認
 ```
