--- a/5_投稿一覧表示.md
+++ b/5_投稿一覧表示.md
@@ -216,11 +216,23 @@ img{
     margin: 0 auto;
 }
 ```
-## 6. 固定画像用、画像アプロード用フォルダ作成
+## 6. JavaScriptファイルの作成
+### public/js/script.js
+```javascript
+function previewImage(obj){
+	var fileReader = new FileReader();
+	fileReader.onload = (function() {
+		document.getElementById('preview').src = fileReader.result;
+	});
+	fileReader.readAsDataURL(obj.files[0]);
+}
+```
+
+## 7. 固定画像用、画像アプロード用フォルダ作成
 ### public/uploads を作成して 1.jpgを配置
 ### public/images を作成して favicon.ico画像を配置
 
-## 7. テンプレートファイルの作成とビューの分離
+## 8. テンプレートファイルの作成とビューの分離
 ### resources/views/layouts/app.blade.php 作成
 ```html
 <!DOCTYPE html>
@@ -318,7 +330,7 @@ img{
 
 ```
 
-## 8. indexアクションの変更
+## 9. indexアクションの変更
 ### app/Http/Controllers/MessagesController.php@index
 ### compact関数の利用
 ```php
@@ -358,7 +370,7 @@ $arr = array(
 $arr = compact('apple', 'orange', 'lemon');
 ```
 
-## 9. Git/Github
+## 10. Git/Github
 ```
 git add .
 git commit -m "一覧表示作成完了"
