--- a/5_投稿一覧表示.md
+++ b/5_投稿一覧表示.md
@@ -251,7 +251,7 @@ function previewImage(obj){
     <body>
         <div class="container">
             <div class="row mt-3">
-                <h1 class=" col-sm-12 text-center">@yield('title')</h1>
+                <h1 class=" col-sm-12 text-center">@yield('header')</h1>
             </div>
             
             @include('commons.flash_message')
